Fix the issue : Could not initialize class org.apache.ignite.IgniteJdbcThinDriver
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>