@@ -104,8 +104,21 @@ allprojects {
     application {
         mainClass = SbkMainClass
         applicationName = archivesBaseName
+
         applicationDefaultJvmArgs = ['-Dsbk.applicationName=' + applicationName, '-Dsbk.className=' + sbkClass,
                                      '-Dsbk.appHome=SBK_APP_HOME', '-Dsbk.jmxExport=false']
+
+        /*
+        applicationDefaultJvmArgs = ['-Dsbk.applicationName=' + applicationName, '-Dsbk.className=' + sbkClass,
+                                     '-Dsbk.appHome=SBK_APP_HOME', '-Dsbk.jmxExport=false',
+                                     '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+                                     '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+                                     '--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+                                     '--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
+                                     '--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
+                                     '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                                     '--illegal-access=permit']
+         */
 
         startScripts {
             doLast {
